--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 
         <div class="container-fluid">
             <button class="download-button mx-auto d-block">
-                <a class="btn" href="" download><u>Download My Resume</u></a>
+                <a class="btn" href="https://github.com/Phoebee0226/Phoebee0226.github.io/releases/download/resume/Resume.pdf" download><u>Download My Resume</u></a>
             </button>
         </div>
     </section>
@@ -582,7 +582,7 @@
                             <div class="col-md-12 item-container portfolioContainer">
                                 <div class="item-container-title col-md-7">Personal Portfolio Website</div>
                                 <div class="col-md-5">
-                                    <img src="images\trademark.png" alt="Personal Portfolio Website icon">
+                                    <img src="images\portfolio\portfolio\web_Design_.jpg" alt="Personal Portfolio Website icon">
                                 </div>
                             </div>
                             <span id="portfoliomodel2" class="model-holder container-fluid" alt="Open model">
@@ -600,7 +600,7 @@
                                                     class="carousel slide carousel-dark" data-bs-ride="carousel">
                                                     <div class="carousel-inner">
                                                         <div class="carousel-item active">
-                                                            <img src="images\trademark.png" class="d-block w-100"
+                                                            <img src="images\portfolio\portfolio\Digital_Devices_Mockup_Vol_4_Freebies.jpg" class="d-block w-100"
                                                                 alt="...">
                                                         </div>
                                                     </div>
